--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7829366485:AAGlAw9wFbzrFqg17-7TJySGxwu4fImyuU8
 ADMIN_ID=6730238086
-DB_URI=mongodb://127.0.0.1:27017/kino_bot
+DB_URI=mongodb+srv://niyozbek:niyozbek20000534$bek@cluster0.ckfhgqb.mongodb.net/MeningKinoBotim?retryWrites=true&w=majority&appName=Cluster0
