--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=7901869869:AAET6Q-LVbHkTeK--PMg49Xnz0lNDNyTCl4
+BOT_TOKEN=7212110440:AAEhkRGKlssB_CWJWE2mRJnv5Bqx7Ys0Ooc
 ADMIN_ID=6730238086,7827547214
-DB_URI=mongodb+srv://niyozbek:niyozbek20000534$bek@cluster0.ckfhgqb.mongodb.net/MeningKinoBotim?retryWrites=true&w=majority&appName=Cluster0
+DB_URI=mongodb://127.0.0.1:27017/kino_bot
